package ch.goodone.angularai.backend.model;

public enum Role {
    ROLE_USER,
    ROLE_ADMIN,
    ROLE_ADMIN_READ
}
